--- a/elteikthesis-master/samples_hu/user.tex
+++ b/elteikthesis-master/samples_hu/user.tex
@@ -23,6 +23,13 @@ A felhasználó az alkalmazással a grafikus felhasználói felületen keresztü
 
 \subsection{Főablak}
 
+\begin{figure}[H]
+	\centering
+	\includegraphics{main_window_empty.png}
+	\caption{A főablak az alkalmazás megnyitásakor}
+	\label{fig:example-1}
+\end{figure}
+
 \subsection{Dialógusablakok}
 
 \subsubsection{Membránstruktúra megadása}
