--- a/elteikthesis-master/thesis_hu.tex
+++ b/elteikthesis-master/thesis_hu.tex
@@ -1,9 +1,9 @@
 \documentclass[
-	parspace, % Add vertical space between paragraphs
+	%parspace, % Add vertical space between paragraphs
 	%noindent, % No indentation of first lines in each paragraph
 	%nohyp, % No hyphenation of words
 	%twoside, % Double sided format
-	draft, % Quicker draft compilation without rendering images
+	%draft, % Quicker draft compilation without rendering images
 	final, % Set final to hide todos
 ]{elteikthesis}[2021/09/20]
 
