user doc v1.0 finished

--- a/elteikthesis-master/elteikthesis.cls
+++ b/elteikthesis-master/elteikthesis.cls
@@ -28,6 +28,7 @@
 \RequirePackage{etoolbox}
 \RequirePackage{xparse}
 \RequirePackage{ifthen}
+\RequirePackage{tikz}
 
 % ------------------------------
 % Processing parameters
